# homeapps

./: .gitignore  LICENSE  README.md  WORKSPACE  go.work  go.work.sum
appinfra/: README.md
applications/: README.md
applications/habittracker/: handler.go  main.go  templates.go
applications/users/: go.mod  go.sum  main.go
applications/users/domain/: user.go
common/clients/eventbroker/: eventbroker.go  go.mod
common/common/: BUILD.bazel  go.mod  uuid.go
common/proto/eventbroker/: Makefile  eventbroker.proto  go.mod
common/proto/servicemesh/: Makefile  go.mod  servicemesh.proto
common/protobuf/checklist/: BUILD.bazel  checklist.proto
common/testutil/: BUILD.bazel  go.mod  net.go  net_test.go  string.go  string_test.go
database/migration/: 0000_0000_0001.sql
lab/: Makefile
microservice/checklist/: BUILD.bazel  Makefile  checklist.go  checklist_test.go  go.mod  server.go
microservice/checklist/database/: checklist.ndm2
microservice/checklist/database/migration/: 0000_0000_0001.sql  0000_0000_0002.sql
microservice/eventbroker/: Makefile  go.mod  server.go
microservice/eventbroker/public/: BUILD.bazel  eventbroker.proto
microservice/servicemesh/: BUILD.bazel  Dockerfile  Makefile  cache.go  config.go  coverage.out  go.mod  go.sum  gprc_client.go  grpc.go  grpc_server.go  grpcclient.go  grpcserver.go  pgsqlrepo.go  repository.go  rest.go  server.go
microservice/servicemesh/config/: config.go
microservice/servicemesh/database/migration/: 0000_0000_0001.sql  0000_0000_0002.sql
microservice/servicemesh/database/pgsql/: pgsql.go
microservice/servicemesh/domain/: service.go
microservice/servicemesh/public/: BUILD.bazel
microservice/servicemesh/service/: pgsql.go  repository.go  service.go
platform/: README.md  docker-compose-dev.yml
platform/vault/: vault-compose-dev.yml
proto/: Makefile  queue.proto  servicemesh.proto
proto/eventbroker/: go.mod
proto/queue/: go.mod
proto/servicemesh/: go.mod
