load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "testutil",
    srcs = ["string.go"],
    importpath = "github.com/dan-solli/homeapps/common/testutil",
    visibility = ["//visibility:public"],
)

go_test(
    name = "testutil_test",
    srcs = ["string_test.go"],
    embed = [":testutil"],
)
