load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "checklist_lib",
    srcs = [
        "checklist.go",
        "server.go",
    ],
    importpath = "github.com/dan-solli/homeapps/microservice/checklist",
    visibility = ["//visibility:private"],
    deps = ["@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library"],
)

go_binary(
    name = "checklist",
    embed = [":checklist_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "checklist_test",
    srcs = ["checklist_test.go"],
    deps = [
        ":checklist_lib",
        "//common/testutil",
    ],
)
