load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "checklist_proto",
    srcs = ["checklist.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "checklist_go_proto",
    importpath = "github.com/dan-solli/homeapps/protos/checklist",
    proto = ":checklist_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "checklist",
    embed = [":checklist_go_proto"],
    importpath = "github.com/dan-solli/homeapps/protos/checklist",
    visibility = ["//visibility:public"],
)
