load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "eventbroker_public_proto",
    srcs = ["eventbroker.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "eventbroker_public_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "./eventbroker_public",
    proto = ":eventbroker_public_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "eventbroker_public",
    embed = [":eventbroker_public_go_proto"],
    importpath = "./eventbroker_public",
    visibility = ["//visibility:public"],
)
