load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "servicemesh_public_proto",
    srcs = ["servicemesh.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "servicemesh_public_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "./servicemesh_public",
    proto = ":servicemesh_public_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "servicemesh_public",
    embed = [":servicemesh_public_go_proto"],
    importpath = "./servicemesh_public",
    visibility = ["//visibility:public"],
)
